[metadata]
name = ffstreamer
description = FFmpeg Streamer
version = attr: ffstreamer.__version__
author = zer0
author_email = osom8979@gmail.com
maintainer = zer0
maintainer_email = osom8979@gmail.com
url = https://github.com/osom8979/ffstreamer
project_urls =
    GitHub: issues = https://github.com/osom8979/ffstreamer/issues
    GitHub: repo = https://github.com/osom8979/ffstreamer
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
keywords =
classifiers =
    Development Status :: 4 - Beta
    Framework :: AsyncIO
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development
    Topic :: Utilities
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.9
packages = find:
include_package_data = True

[options.packages.find]
exclude =
    tester*

[options.exclude_package_data]
ffstreamer.assets = .gitignore
ffstreamer.www = .gitignore

[options.entry_points]
console_scripts =
    ffstreamer = ffstreamer.entrypoint:main
